pkg/lang/testdata/ub/config/valid/input-local-navigation.ub
locals: {
  aws-config: {
    assume-role: {
      role-arn:    'arn:aws:iam::123456789012:role/unobin-state'
      external-id: 'unobin-test'
    }
  }
}

inputs: { role: local.aws-config.assume-role.role-arn }
