pkg/lang/testdata/ub/config/invalid/pin-local-reference.ub
locals: { lib: 'github.com/me/lib' }

factory: { pin: { library-path: local.lib } }
